--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ ul {
   padding: 40px 40px 40px 40px;
 }
 .quotationmark {
-  font-family: 'Abril Fatface' cursive;
+  font-family: 'Abril Fatface' bold;
   color: white;
   font-size: 80px;
   background-color: #444;
